--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
     <header class="www-header" style="background-image:url(images/n0.jpg);">
-        <h1 class="mb4 px2 col-12 sm-col-8 mx-auto" style="background-color:#000;transparency:50%;">{{ .Title }}</h1>
-
+        <h1 class="mb4 px2 col-12 sm-col-8 mx-auto www-component-anchor" style="background-color:#000;transparency:50%;">{{ .Title }}</h1>
+ class="www-component-anchor 
         <span class="h3 block mb4 px2 col-12 sm-col-8 mx-auto">{{ .Site.Params.description }}</span>
 
         </header>
