--- a/themes/amp/layouts/partials/subcat/water-treatment.html
+++ b/themes/amp/layouts/partials/subcat/water-treatment.html
@@ -3,6 +3,6 @@
   <li class="clearfix mb3"><a href="/cat/no-treatment-water-systems" class="www-component-anchor text-decoration-none left" option="body">no treatment water systems</a></li>
   <li class="clearfix mb3"><a href="/cat/chlorination" class="www-component-anchor text-decoration-none left" option="body">Chlorination</a></li>
   <li class="clearfix mb3"><a href="/cat/slow-sand-filter" class="www-component-anchor text-decoration-none left" option="body">Slow sand filter</a></li>
-  <li class="clearfix mb3"><a href="/cat/boiling" class="www-component-anchor text-decoration-none left" option="body">boiling</a></li>
+  <li class="clearfix mb3"><a href="/cat/boiling-water" class="www-component-anchor text-decoration-none left" option="body">boiling</a></li>
   <li class="clearfix mb3"><a href="/cat/ultraviolet-light" class="www-component-anchor text-decoration-none left" option="body">Ultraviolet light</a></li>
 </ul>
