--- a/themes/amp/layouts/partials/tag.html
+++ b/themes/amp/layouts/partials/tag.html
@@ -13,6 +13,7 @@
 {{else}} 
 
 {{if eq .Title "Wastewater Collection" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
+{{if eq .Title "wastewater collection" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
 {{if eq .Title "No Collection" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
 {{if eq .Title "Nightsoil Bucket" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
 {{if eq .Title "Vault Cartage" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
@@ -50,29 +51,45 @@
 {{if eq .Title "Standpump"}} {{partial "subcat/procurement.html"}}{{end}}
 
 {{if eq .Title "Water Sources"}} {{partial "subcat/water-sources.html"}}{{end}}
-{{if eq .Title "Rooftop Water Harvesting"}} {{partial "subcat/water-sources.html"}}{{end}}
-{{if eq .Title "Ground Level Catchment"}} {{partial "subcat/water-sources.html"}}{{end}}
+{{if eq .Title "water sources"}} {{partial "subcat/water-sources.html"}}{{end}}
+{{if eq .Title "Rooftop water harvesting"}} {{partial "subcat/water-sources.html"}}{{end}}
+{{if eq .Title "rooftop water harvesting"}} {{partial "subcat/water-sources.html"}}{{end}}
+{{if eq .Title "Ground level catchment"}} {{partial "subcat/water-sources.html"}}{{end}}
+{{if eq .Title "ground level catchment"}} {{partial "subcat/water-sources.html"}}{{end}}
 {{if eq .Title "Subsurface Dam"}} {{partial "subcat/water-sources.html"}}{{end}}
+{{if eq .Title "subsurface dam"}} {{partial "subcat/water-sources.html"}}{{end}}
 {{if eq .Title "Surface Water Abstraction"}} {{partial "subcat/water-sources.html"}}{{end}}
+{{if eq .Title "surface water abstraction"}} {{partial "subcat/water-sources.html"}}{{end}}
 {{if eq .Title "Spring Water Captation"}} {{partial "subcat/water-sources.html"}}{{end}}
-{{if eq .Title "Hand Dug Well"}} {{partial "subcat/water-sources.html"}}{{end}}
-{{if eq .Title "Drilled Well"}} {{partial "subcat/water-sources.html"}}{{end}}
+{{if eq .Title "spring water captation"}} {{partial "subcat/water-sources.html"}}{{end}}
+{{if eq .Title "hand dug well"}} {{partial "subcat/water-sources.html"}}{{end}}
+{{if eq .Title "drilled well"}} {{partial "subcat/water-sources.html"}}{{end}}
 
 {{if eq .Title "Treatment"}}{{ partial "subcat/treatment.html"}}{{end}}
+{{if eq .Title "treatment"}}{{ partial "subcat/treatment.html"}}{{end}}
+{{if eq .Title "wastewater treatment"}}{{ partial "subcat/treatment.html"}}{{end}}
 {{if eq .Title "No Treatment"}}{{ partial "subcat/treatment.html"}}{{end}}
+{{if eq .Title "no treatment"}}{{ partial "subcat/treatment.html"}}{{end}}
 {{if eq .Title "Oxidation Ditch"}}{{ partial "subcat/treatment.html"}}{{end}}
 {{if eq .Title "Constructed Wetlands"}}{{ partial "subcat/treatment.html"}}{{end}}
 {{if eq .Title "Soil Aquifer Treatment"}}{{ partial "subcat/treatment.html"}}{{end}}
+{{if eq .Title "soil aquifer treatment"}}{{ partial "subcat/treatment.html"}}{{end}}
 {{if eq .Title "Rotating Biological Contractor"}}{{ partial "subcat/treatment.html"}}{{end}}
+{{if eq .Title "rotating biological contctor"}}{{ partial "subcat/treatment.html"}}{{end}}
 {{if eq .Title "Trickling Filters"}}{{ partial "subcat/treatment.html"}}{{end}}
-{{if eq .Title "Activated Sludge Process"}}{{ partial "subcat/treatment.html"}}{{end}}
+{{if eq .Title "trickling filters"}}{{ partial "subcat/treatment.html"}}{{end}}
+{{if eq .Title "activated sludge process"}}{{ partial "subcat/treatment.html"}}{{end}}
 {{if eq .Title "Stabilization Ponds"}}{{ partial "subcat/treatment.html"}}{{end}}
+{{if eq .Title "stabilization ponds"}}{{ partial "subcat/treatment.html"}}{{end}}
 {{if eq .Title "UV Sterilization"}}{{ partial "subcat/treatment.html"}}{{end}}
 
 {{if eq .Title "Water Treatment"}}{{ partial "subcat/water-treatment.html"}}{{end}}
+{{if eq .Title "water treatment"}}{{ partial "subcat/water-treatment.html"}}{{end}}
 {{if eq .Title "No Treatment Water Systems"}}{{ partial "subcat/water-treatment.html"}}{{end}}
 {{if eq .Title "Chlorination"}}{{ partial "subcat/water-treatment.html"}}{{end}}
+{{if eq .Title "chlorination"}}{{ partial "subcat/water-treatment.html"}}{{end}}
 {{if eq .Title "Slow Sand Filter"}}{{ partial "subcat/water-treatment.html"}}{{end}}
+{{if eq .Title "slow sand filter"}}{{ partial "subcat/water-treatment.html"}}{{end}}
 {{if eq .Title "Boiling"}}{{ partial "subcat/water-treatment.html"}}{{end}}
 {{if eq .Title "Ultraviolet Light"}}{{ partial "subcat/water-treatment.html"}} {{end}}
 {{if eq .Title "Reverse Osmosis"}}{{ partial "subcat/water-treatment.html"}} {{end}}
@@ -82,18 +99,21 @@
  {{if eq .Title "Sludge Burial"}}{{ partial "subcat/disposal.html"}}{{end}}
  {{if eq .Title "Waste Composting"}}{{ partial "subcat/disposal.html"}}{{end}}
  {{if eq .Title "Pit Privy"}}{{ partial "subcat/disposal.html"}}{{end}}
+ {{if eq .Title "Pit privy"}}{{ partial "subcat/disposal.html"}}{{end}}
  {{if eq .Title "Ventilated Improved Pit Latrine"}}{{ partial "subcat/disposal.html"}}{{end}}
+ {{if eq .Title "Ventilated improved pit latrine"}}{{ partial "subcat/disposal.html"}}{{end}}
  {{if eq .Title "Aqua Privy"}}{{ partial "subcat/disposal.html"}}{{end}}
  {{if eq .Title "Pour Flush Toilet"}}{{ partial "subcat/disposal.html"}}{{end}}
+ {{if eq .Title "Pour flush toilet"}}{{ partial "subcat/disposal.html"}}{{end}}
  {{if eq .Title "Cistern Flush Toilet"}}{{ partial "subcat/disposal.html"}}{{end}}
  {{if eq .Title "Drainage Field"}}{{ partial "subcat/disposal.html"}}{{end}}
 
  {{if eq .Title "MSW"}}{{ partial "subcat/municipal-waste.html"}}{{end}}
  {{if eq .Title "Municipal Solid Waste Storage"}}{{ partial "subcat/municipal-waste-storage.html"}}{{end}}
  {{if eq .Title "municipal solid waste storage no storage systems"}}{{ partial "subcat/municipal-waste-storage.html"}}{{end}}
- {{if eq .Title "No Storage"}}{{ partial "subcat/municipal-waste-storage.html"}}{{end}}
- {{if eq .Title "Household Bin"}}{{ partial "subcat/municipal-waste-storage.html"}}{{end}}
- {{if eq .Title "Communal Bin"}}{{ partial "subcat/municipal-waste-storage.html"}}{{end}}
+ {{if eq .Title "municipal solid waste disposal"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
+ {{if eq .Title "no municipal solid waste disposal"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
+ {{if eq .Title "municipal disposal open dumps"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}} {{if eq .Title "msw disposal waste discarded at source"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
 
  {{if eq .Title "Municipal Solid Waste Transfer"}}{{ partial "subcat/municipal-waste-transfer.html"}}{{end}}
  {{if eq .Title "No Transfer"}}{{ partial "subcat/municipal-waste-transfer.html"}}{{end}}
@@ -103,6 +123,7 @@
  {{if eq .Title "Compactor Trucks"}}{{ partial "subcat/municipal-waste-transfer.html"}}{{end}}
 
  {{if eq .Title "No Disposal"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
+ {{if eq .Title "mws disposal no disposal"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
  {{if eq .Title "Waste Discarded at Source"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
  {{if eq .Title "Open Burning"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
  {{if eq .Title "Open Dumps"}}{{ partial "subcat/municipal-waste-disposal.html"}}{{end}}
@@ -115,6 +136,7 @@
  {{if eq .Title "Composting"}}{{ partial "subcat/municipal-waste-recovery.html"}}{{end}}
  {{if eq .Title "Refuse Derived Fuel"}}{{ partial "subcat/municipal-waste-recovery.html"}}{{end}}
  {{if eq .Title "Pyrolysis"}}{{ partial "subcat/municipal-waste-recovery.html"}}{{end}}
+ {{if eq .Title "pyrolysis"}}{{ partial "subcat/municipal-waste-recovery.html"}}{{end}}
  {{if eq .Title "Munitipal Solid Waste Recycling"}}{{ partial "subcat/municipal-waste-recovery.html"}}{{end}}
             </aside>
             <aside class="col-1 xs-hide"></aside>
