--- a/themes/amp/layouts/partials/subcat/disposal.html
+++ b/themes/amp/layouts/partials/subcat/disposal.html
@@ -1,6 +1,6 @@
 <ul class="www-component-anchors list-reset m0 p0 px1 caps">
   <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/disposal" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">Wastewater and Sewage Disposal methods</a></li>
-  <li class="clearfix mb3"><a href="/cat/sludge-burial" class="www-component-anchor text-decoration-none left" option="body">burial</a></li>
+  <li class="clearfix mb3"><a href="/cat/solid-waste-burial" class="www-component-anchor text-decoration-none left" option="body">burial</a></li>
   <li class="clearfix mb3"><a href="/cat/waste-composting" class="www-component-anchor text-decoration-none left" option="body">composting</a></li>
   <li class="clearfix mb3"><a href="/cat/pit-privy" class="www-component-anchor text-decoration-none left" option="body">pit privy</a></li>
   <li class="clearfix mb3"><a href="/cat/ventilated-improved-pit-latrine" class="www-component-anchor text-decoration-none left" option="body">ventilated improved pit latrine</a></li>
