--- a/themes/amp/layouts/partials/subcat/transfer.html
+++ b/themes/amp/layouts/partials/subcat/transfer.html
@@ -3,6 +3,6 @@
   <li class="clearfix mb3"><a href="/cat/no-transfer" class="www-component-anchor text-decoration-none left" option="body">No Transfer</a></li>
   <li class="clearfix mb3"><a href="/cat/small-bore-settled-storage" class="www-component-anchor text-decoration-none left" option="body">small bore / settled storage</a></li>
   <li class="clearfix mb3"><a href="/cat/conventional-sewerage" class="www-component-anchor text-decoration-none left" option="body">conventional sewerage</a></li>
-  <li class="clearfix mb3"><a href="/cat/drainage-field" class="www-component-anchor text-decoration-none left" option="body">drainage field</a></li>
+  <li class="clearfix mb3"><a href="/cat/drainage-field-transfer" class="www-component-anchor text-decoration-none left" option="body">drainage field</a></li>
 </ul>
 
