--- a/themes/amp/layouts/partials/subcat/treatment.html
+++ b/themes/amp/layouts/partials/subcat/treatment.html
@@ -4,7 +4,7 @@
   <li class="clearfix mb3"><a href="/cat/constructed-wetlands" class="www-component-anchor text-decoration-none left" option="body">Constructed Wetlands</a></li>
   <li class="clearfix mb3"><a href="/cat/soil-aquifer-treatment" class="www-component-anchor text-decoration-none left" option="body">Soil Aquifer Treatment</a></li>
   <li class="clearfix mb3"><a href="/cat/oxidation-ditch" class="www-component-anchor text-decoration-none left" option="body">Oxidation ditch</a></li>
-  <li class="clearfix mb3"><a href="/cat/roltating-biological-contractor" class="www-component-anchor text-decoration-none left" option="body">rotating biological contractor</a></li>
+  <li class="clearfix mb3"><a href="/cat/rotating-biological-contactor" class="www-component-anchor text-decoration-none left" option="body">rotating biological contactor</a></li>
   <li class="clearfix mb3"><a href="/cat/trickling-filters" class="www-component-anchor text-decoration-none left" option="body">trickling filters</a></li>
   <li class="clearfix mb3"><a href="/cat/activated-sludge-process" class="www-component-anchor text-decoration-none left" option="body">Activated Sludge Process</a></li>
   <li class="clearfix mb3"><a href="/cat/stabilization-ponds" class="www-component-anchor text-decoration-none left" option="body">Stabilization Ponds</a></li>
