--- a/themes/amp/layouts/partials/subcat/municipal-waste-transfer.html
+++ b/themes/amp/layouts/partials/subcat/municipal-waste-transfer.html
@@ -1,8 +1,8 @@
 <ul class="www-component-anchors list-reset m0 p0 px1 caps">
-  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/msw-transfer" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">Municipal Solid Waste Transfer</a></li>
-  <li class="clearfix mb3"><a href="/cat/mws-transfer_no-transfer-systems" class="www-component-anchor text-decoration-none left" option="body">no transfer</a></li>
-  <li class="clearfix mb3"><a href="/cat/msw-transfer_human-power" class="www-component-anchor text-decoration-none left" option="body">human power</a></li>
-  <li class="clearfix mb3"><a href="/cat/msw-transfer_animal-power" class="www-component-anchor text-decoration-none left" option="body">animal power</a></li>
-  <li class="clearfix mb3"><a href="/cat/msw-transfer_non-compactor-trucks" class="www-component-anchor text-decoration-none left" option="body">non-compactor trucks</a></li>
-  <li class="clearfix mb3"><a href="/cat/msw-transfer_compactor-trucks" class="www-component-anchor text-decoration-none left" option="body">compactor trucks</a></li>
+  <li class="clearfix mb3" style="background-image: linear-gradient(30deg,#4a8b12 0,#07126e);color:#fff;border:10px;justify:center;width:100%;"><a href="/cat/municipal-solid-waste-transfer" class="www-component-anchor text-decoration-none left" style="margin:5px;" option="body">Municipal Solid Waste Transfer</a></li>
+  <li class="clearfix mb3"><a href="/cat/solidwaste-no-transfer" class="www-component-anchor text-decoration-none left" option="body">no transfer</a></li>
+  <li class="clearfix mb3"><a href="/cat/solidwaste-transfer-human-power" class="www-component-anchor text-decoration-none left" option="body">human power</a></li>
+  <li class="clearfix mb3"><a href="/cat/solidwaste-transfer-animal-power" class="www-component-anchor text-decoration-none left" option="body">animal power</a></li>
+  <li class="clearfix mb3"><a href="/cat/solidwaste-transfer-non-compactor-trucks" class="www-component-anchor text-decoration-none left" option="body">non-compactor trucks</a></li>
+  <li class="clearfix mb3"><a href="/cat/solidwaste-transfer-compactor-trucks" class="www-component-anchor text-decoration-none left" option="body">compactor trucks</a></li>
 </ul>
