--- a/themes/amp/layouts/_default/list.html
+++ b/themes/amp/layouts/_default/list.html
@@ -3,6 +3,10 @@
         <h1 class="mb4 px2 col-12 sm-col-8 caps mx-auto">{{ .Title }}</h1>
         <span class="h3 block mb4 px2 col-12 sm-col-8 mx-auto">{{ .Params.description }}</span>
         </header>
+
+<div class="col">                         </div>
+
+
 {{ partial "tag.html" . }}
 
 </aside>
