--- a/themes/amp/layouts/_default/single.html
+++ b/themes/amp/layouts/_default/single.html
@@ -1,5 +1,8 @@
 {{ partial "header.html" . }}
-    <header class="www-header center">
+    <header class="www-header center"
+    {{ if .Params.headerimage }} style="background-image:url(/images/headers/{{ .Params.headerimage }});"
+    {{ end }}
+>
         <h1 class="mb1">{{ .Title }}</h1>
         <div class="www-index-header-action mx-auto">{{ .Date.Format "Mon, Jan 2, 2006" }}</div>
         <div class="www-index-header-action mx-auto">
