--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -16,7 +16,7 @@
         <div class="card__overlay">
           <div>
             <h5 class="card__overlay-heading">
-              Applied Learning
+              Engaged learning
             </h5>
           </div>
         </div>
@@ -24,7 +24,7 @@
         <div class="card__beneath">
           <div>
             <h5 class="card__heading">
-              Real life learning opporunities
+              Community dialogues via Peace Engineering student programs. 
             </h5>
 
             <p class="card__text">
@@ -33,33 +33,6 @@
           </div>
         </div>
       </div>
-
-      <div class="card card--fresh">
-        <div class="card__overlay">
-          <div>
-            <h5 class="card__overlay-heading">
-              Applied Learning
-            </h5>
-          </div>
-        </div>
-
-        <div class="card__beneath">
-          <div>
-            <h5 class="card__heading">
-              Real life learning opporunities
-            </h5>
-
-            <p class="card__text">
-              "SCD Clinics" Our method is to support more community involvement with strutured support and research partnerships.
-            </p>
-          </div>
-        </div>
-      </div>
-
-
-
-
-
     </div>
     
     <div class="card-grid__section">
@@ -262,7 +235,7 @@
   </div>
 </div>
 
-
+<!--
   <span class="row">
     <div class="col-auto"></div>
     <div class="mb2 px2 col-2 sm-col-2 mx-auto www-component-anchor"><img width=210 src="/images/buttons/drinking_water.gif"></div>
@@ -273,7 +246,7 @@
     <div class="mb2 px2 col-2 sm-col-2 mx-auto www-component-anchor"><img width=210 src="/images/buttons/wastewater.gif"></div>
     <div class="col-auto"></div>
   </span>
-
+-->
   <span class="row">
     <div class="col-auto"></div>
     <div class="mb2 px2 col-2 sm-col-2 mx-auto www-component-anchor"><img width=210 src="/images/buttons/solid_waste.gif"></div>
