--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -222,11 +222,11 @@
         <div class="card__beneath">
           <div>
             <h5 class="card__heading">
-              Etiny worldbridgers creatives collective
+              Summer 2021 - Drexel U Support
             </h5>
 
             <p class="card__text">
-               Creative expression and helpful community development are interdependant.  'Shadow Self Cypher Series', IT clinics, facilitation of mentor-mentee relationships facilitate crossovers.
+               Thank you Enoch and Khalil for your work on practical sustainable building materials reference citations.
             </p>
           </div>
         </div>
