--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -36,37 +36,12 @@
     </div>
     
     <div class="card-grid__section">
-      <div class="card card--aqua">
-        <div class="card__overlay">
-          <div>
-            <h5 class="card__overlay-heading">
-              Assisting improvised & emergent communities
-            </h5>
-          </div>
-        </div>
-
-        <div class="card__beneath">
-          <div>
-            <h5 class="card__heading">
-              Umati Portal to assist Table Banking groups
-            </h5>
-
-            <p class="card__text">
-              Getting clean water, quality food and reliable sanitation.
-            </p>
-            
-            <p class="card__text">
-              Understanding context is critical, and the key to successful long term outcomes.
-            </p>
-          </div>
-        </div>
-      </div>
       
       <div class="card card--vanilla">
         <div class="card__overlay">
           <div>
             <h5 class="card__overlay-heading">
-              Vulnerable girl project
+              Partner project- Vulnerable girl project
             </h5>
           </div>
         </div>
@@ -93,6 +68,31 @@
           </div>
         </div>
       </div>
+      <div class="card card--aqua">
+        <div class="card__overlay">
+          <div>
+            <h5 class="card__overlay-heading">
+              Assisting improvised & emergent communities
+            </h5>
+          </div>
+        </div>
+
+        <div class="card__beneath">
+          <div>
+            <h5 class="card__heading">
+              Umati Portal to assist Table Banking groups
+            </h5>
+
+            <p class="card__text">
+              Getting clean water, quality food and reliable sanitation.
+            </p>
+            
+            <p class="card__text">
+              Understanding context is critical, and the key to successful long term outcomes.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
     
     <div class="card-grid__shorter">
@@ -100,7 +100,7 @@
         <div class="card__overlay">
           <div>
             <h5 class="card__overlay-heading">
-              Ras-Tronics Biodigester
+              Partner project- Rastronics Biodigester
             </h5>
           </div>
         </div>
@@ -156,7 +156,7 @@
         <div class="card__overlay">
           <div>
             <h5 class="card__overlay-heading">
-              Mamawatoto Eco School
+              Partner project- Mamawatoto Self Help Group 
             </h5>
           </div>
         </div>
