--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -41,7 +41,7 @@
         <div class="card__overlay">
           <div>
             <h5 class="card__overlay-heading">
-              Partner project- Vulnerable girl project
+              Partner project- school girl assistance
             </h5>
           </div>
         </div>
